2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* Structs.cs:
	* Command.cs:
	* Linux/Command.cs:
	* Device/Commands.cs:
	* Device/AtaCommands.cs:
	* Device/ScsiCommands.cs:
	* Device/AtapiCommands.cs:
	  Moved devices enums and structs out of classes.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	  Implemented SCSI VPDs 0x00 to 0x80.

2015-10-18  Natalia Portillo  <claunia@claunia.com>

	* Device/AtaCommands.cs:
	* Device/ScsiCommands.cs:
	* Device/AtapiCommands.cs:
	* DiscImageChef.Devices.csproj:
	  Added specific console handling for standard, verbose, debug
	  and error outputs.

2015-10-17  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	  Added information from T10/536 rev. 4a (ZBC)

2015-10-17  Natalia Portillo  <claunia@claunia.com>

	* Device/AtaCommands.cs:
	* Device/AtapiCommands.cs:
	  Corrected typos that resulted in device reset :p

2015-10-16  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	  Added command clash in XML documentation

2015-10-15  Natalia Portillo  <claunia@claunia.com>

	* Device/AtaCommands.cs:
	* Device/ScsiCommands.cs:
	* Device/AtapiCommands.cs:
	  Added duration debug printfs.

	* Enums.cs:
	  Corrected device<->host direction.

	* Linux/Command.cs:
	  Corrected device<->host direction.
	Changed to workaround how ATA Pass-Through is really
	  implemented in Linux.

2015-10-14  Natalia Portillo  <claunia@claunia.com>

	* Device/Commands.cs:
	* Device/AtaCommands.cs:
	* Device/AtapiCommands.cs:
	  Added XML documentation.

2015-10-14  Natalia Portillo  <claunia@claunia.com>

	* Device/AtaCommands.cs:
	  Added ATA IDENTIFY DEVICE command.

	* Device/AtapiCommands.cs:
	  Added ATAPI IDENTIFY PACKET DEVICE command.

	* Structs.cs:
	* Device/ScsiCommands.cs:
	  Added header description.

	* DiscImageChef.Devices.csproj:
	  Added ATA IDENTIFY DEVICE command.
	Added ATAPI IDENTIFY PACKET DEVICE command.

2015-10-14  Natalia Portillo  <claunia@claunia.com>
